# indic-tokenizer

./: .gitignore  README.md  app.py  indic-bert-tokenizer-builder.py  indic-bert-tokenizer-tester.py  indic-bert-tokenizer.py  indic-bert.py  indic-unicode-mapper-tester.py  indic_bert_tokenizer.py  indic_unicode_mapper.py  indic_unicode_mapper_tester.py  logger.py  requirements.txt  tutorial.ipynb
pkg/: LICENSE  README.md  pyproject.toml  requirements.txt
pkg/src/indic_tokenizer/: __init__.py  indic_bert_tokenizer.py
pkg/tests/: indic-bert-tokenizer-tester.py
scripts/: fine_tune_lyrics.py  pretrain_tamil_gpt.py
